# Coyote_PipeRec_DLRM

./: .gitignore  LICENSE.md  README.md
Coyote/client_py/: CMakeLists.txt  example.py
Coyote/client_py/src/: rdma_module.cpp
Coyote/driver/include/: fpga_dev.h
Coyote/examples/09_preprocess/: README.md
Coyote/examples/11_preprocess_dlrm/sw/: CMakeLists.txt
Coyote/examples/11_preprocess_dlrm/sw/src/: fpga_p2p_pybind.cpp
Coyote/examples/12_preprocess_dlrm_rdma/sw/src/server/: CMakeLists.txt  main.cpp
Coyote/sw/include/: bThread.hpp  cDefs.hpp
Coyote/sw/src/: bThread.cpp
Coyote/util/: program_hacc_local.sh
DLRM/: README.md  environment_3090.yml
DLRM/dlrm/: data_utils.py  data_utils_1_1.py  data_utils_2.py  data_utils_3.py  data_utils_4.py  data_utils_5.py  data_utils_6.py  data_utils_binary_dataset.ipynb  dlrm.out  dlrm_data_pytorch.py  dlrm_s_pytorch copy.py  dlrm_s_pytorch.py  dlrm_s_pytorch_original.py  dlrm_s_pytorch_preproc_fpga.py  intel_1M_utf8.out  intel_5k_binary_1.out  test_operator.py
DLRM/dlrm/bench/: cmp_1.py  cmp_2.py  dlrm_fpga_preproc_AMD.sh  dlrm_pytorch_bench.sh  dlrm_s_benchmark.sh  dlrm_s_criteo_kaggle_3090.sh  dlrm_s_criteo_kaggle_a100.sh  dlrm_s_criteo_kaggle_a100_random.sh  fpga_batch_dump.txt  test.py  test_io copy.ipynb  test_io_1m.ipynb  test_io_5k.ipynb  test_operator.py  tmp.py
DLRM/dlrm/run_kaggle_pt/: events.out.tfevents.1731961801.sgs-gpu02.ethz.ch.143310.0  events.out.tfevents.1731962258.sgs-gpu02.ethz.ch.146266.0  events.out.tfevents.1731962631.sgs-gpu02.ethz.ch.148998.0  events.out.tfevents.1731963141.sgs-gpu02.ethz.ch.152675.0  events.out.tfevents.1731963803.sgs-gpu02.ethz.ch.156762.0  events.out.tfevents.1731964479.sgs-gpu02.ethz.ch.175828.0  events.out.tfevents.1731965190.sgs-gpu02.ethz.ch.180628.0  events.out.tfevents.1731965924.sgs-gpu02.ethz.ch.185161.0  events.out.tfevents.1731966780.sgs-gpu02.ethz.ch.190392.0  events.out.tfevents.1731967662.sgs-gpu02.ethz.ch.205484.0  events.out.tfevents.1731968619.sgs-gpu02.ethz.ch.216577.0  events.out.tfevents.1731969561.sgs-gpu02.ethz.ch.221457.0  events.out.tfevents.1731970540.sgs-gpu02.ethz.ch.225197.0  events.out.tfevents.1731971486.sgs-gpu02.ethz.ch.242917.0  events.out.tfevents.1731972306.sgs-gpu02.ethz.ch.245971.0  events.out.tfevents.1732022651.sgs-gpu02.ethz.ch.619191.0  events.out.tfevents.1732023219.sgs-gpu02.ethz.ch.621949.0  (+9 more)
DLRM/dlrm/tools/: visualize.py
DLRM/parquet/: =3.9.0  cmp.out  data_utils_1.py  data_utils_binary_column_storage.py  data_utils_binary_column_vocab_large_load.py  data_utils_binary_column_vocab_large_load_chunks.py  data_utils_binary_column_vocab_small_load.py  data_utils_binary_column_vocab_small_load_chunks.py  data_utils_binary_row.py  data_utils_binary_to_parquet.py  data_utils_binary_to_parquet_13_dense_26_sparse copy.py  data_utils_binary_to_parquet_13_dense_26_sparse.py  data_utils_binary_to_parquet_504_dense_42_sparse copy.py  data_utils_binary_to_parquet_504_dense_42_sparse.py  data_utils_parquet_pipeline_0.py  data_utils_parquet_pipeline_0_col_dense.py  data_utils_parquet_pipeline_0_col_sparse.py  data_utils_parquet_pipeline_0_col_sparse_int.py  data_utils_parquet_pipeline_1.py  data_utils_parquet_pipeline_2.py  data_utils_parquet_pipeline_2_vocab_apply.py  data_utils_parquet_pipeline_2_vocab_gen.py  data_utils_parquet_vocab_large_apply.py  data_utils_parquet_vocab_large_gen.py  data_utils_parquet_vocab_large_load.py  data_utils_parquet_vocab_large_no.py  data_utils_parquet_vocab_power_large_gen.py  data_utils_parquet_vocab_power_small_gen.py  data_utils_parquet_vocab_power_small_no.py  data_utils_parquet_vocab_small_apply.py  data_utils_parquet_vocab_small_gen.py  data_utils_parquet_vocab_small_load.py  data_utils_parquet_vocab_small_no.py  data_utils_utf8_row.py  data_utils_utf8_row_multithread.py  data_utils_utf8_to_parquet.py  nvtabular_gpu_large_512k.py  nvtabular_gpu_large_8k.py  nvtabular_gpu_large_8k_no_vocab.py  nvtabular_gpu_small_512k.py  (+25 more)
Measurements/cpu_gpu_pipeline/: end_to_end_pipeline_AMD.csv  end_to_end_pipeline_AMD.xlsx  end_to_end_pipeline_NVIDIA.xlsx  gpu_utilization.csv
Measurements/fpga_gpu_pipeline/: end_to_end_pipeline.xlsx  gpu_utilization.csv  preprocessing_cpu_fpga_gpu.xlsx  pure_data_transfer_cpu_fpga_cpu.xlsx  pure_data_transfer_cpu_fpga_gpu.xlsx  pure_data_transfer_gpu_fpga_gpu.xlsx
(+142 files in other folders)
